--- a/packages/tools/sugar/src/views/twig/sugar/bare/cell/cell.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/bare/cell/cell.twig
@@ -1,3 +1,3 @@
-<div class="s-cell {{ attributes.class }}" {{ attrs(attributes, ['class'])|raw }}>
+<div class="s-cell {{ attributes.class }} {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" {{ attrs(attributes, ['class'])|raw }}>
     {{ content|raw }}
 </div>
