--- a/packages/tools/sugar/src/views/twig/sugar/bare/container/container.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/bare/container/container.twig
@@ -1,3 +1,3 @@
-<div {{ attrs(attributes)|raw }}>
+<div class="{{ attributes.class }} {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" {{ attrs(attributes, ['class'])|raw }}>
 {{ content|raw }}
 </div>
