--- a/packages/@examples/01-basic/src/css/index.css
+++ b/packages/@examples/01-basic/src/css/index.css
@@ -4,29 +4,36 @@
 @sugar.import ('./generic/**/*.css');
 
 body {
-  background: sugar.color(base, background);
-  overflow-x: hidden;
+    background: sugar.color(base, background);
+    overflow-x: hidden;
 
-  &.initial-loading .content {
-    display: none;
-  }
+    &.initial-loading .content {
+        display: none;
+    }
+}
+
+[s-appear] {
+    opacity: 0;
+}
+[s-appear][appear] {
+    opacity: 1;
 }
 
 /* logo */
 .logo {
-  svg [fill='white'] {
-    fill: sugar.color(main, --darken 10);
-  }
-  svg [fill='#FEBD0F'] {
-    fill: sugar.color(accent);
-  }
-
-  @sugar.theme.when (dark) {
     svg [fill='white'] {
-      fill: sugar.color(main, text);
+        fill: sugar.color(main, --darken 10);
     }
     svg [fill='#FEBD0F'] {
-      fill: sugar.color(accent);
+        fill: sugar.color(accent);
     }
-  }
+
+    @sugar.theme.when (dark) {
+        svg [fill='white'] {
+            fill: sugar.color(main, text);
+        }
+        svg [fill='#FEBD0F'] {
+            fill: sugar.color(accent);
+        }
+    }
 }
