--- a/packages/app/s-carpenter/src/css/s-carpenter-component.css
+++ b/packages/app/s-carpenter/src/css/s-carpenter-component.css
@@ -1,3 +1,22 @@
+.s-carpenter--editor {
+}
+
+.s-carpenter__content {
+    position: absolute;
+    top: 0;
+    left: 300px;
+    right: 0;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @sugar.transition (fast);
+
+    .s-carpenter--editor & {
+        right: 500px;
+    }
+}
+
 .s-carpenter {
     position: fixed;
     top: 0;
@@ -7,9 +26,7 @@
     height: 100vh;
     pointer-events: none;
 
-    .__navigation {
-        display: none;
-    }
+    .__navigation,
     .__editor {
         position: absolute;
         top: 0;
@@ -24,12 +41,25 @@
         @sugar.depth (100);
         @sugar.transition();
         @sugar.scrollbar();
+    }
 
-        &.active {
+    .s-carpenter--editor & {
+        .__editor {
             transform: translateX(0);
             opacity: 1;
             pointer-events: all;
         }
+    }
+
+    .__navigation {
+        right: auto;
+        left: 0;
+        width: 300px;
+        background: sugar.color(base, background, --darken 2%);
+        padding: sugar.padding(30);
+        transform: translateX(0);
+        opacity: 1;
+        pointer-events: all;
     }
 
     .s-specs-editor__prop:not(.s-specs-editor__child .s-specs-editor__prop) {
