--- a/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
+++ b/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
@@ -1,4 +1,4 @@
-<section class="section-tabs">
+<section class="section-tabs" s-specs="views.sections.tabs">
     <div class="s-container">
         <div class="__layout">
             <div s-appear in="left" delay="400">
