update components and section with margin and padding support

--- a/packages/@examples/01-basic/src/views/sections/card/card.twig
+++ b/packages/@examples/01-basic/src/views/sections/card/card.twig
@@ -1,4 +1,4 @@
-<section class="section-card">
+<section class="section-card {{ paddingClasses(padding) }} {{ marginClasses(margin) }}">
     <div class="s-container:wide">
         <div class="s-layout">
             <div>
