--- a/packages/@examples/01-basic/src/views/sections/separator/separator.twig
+++ b/packages/@examples/01-basic/src/views/sections/separator/separator.twig
@@ -1,4 +1,4 @@
-<section class="section-separator">
+<section class="section-separator {{ paddingClasses(padding) }} {{ marginClasses(margin) }}">
     <div class="__bkg">
         {% if image %}
             <img class="__img" src="{{ image.url }}" alt="{{ image.alt }}" />
