--- a/packages/@examples/01-basic/src/views/sections/story/story.twig
+++ b/packages/@examples/01-basic/src/views/sections/story/story.twig
@@ -1,4 +1,4 @@
-<section class="section-story" layout="{{ layout }}" s-appear in="bottom" delay="500">
+<section class="section-story {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" layout="{{ layout }}" s-appear in="bottom" delay="500">
     <div class="s-container">
         <div class="s-layout:{{ layout }} @mobile s-layout:1_2">
             <div>
