--- a/packages/@examples/01-basic/src/views/sections/heading/heading.twig
+++ b/packages/@examples/01-basic/src/views/sections/heading/heading.twig
@@ -1,4 +1,7 @@
-<section class="section-heading {{ paddingClasses(padding) }} {{ marginClasses(margin) }}">
+<section class="section-heading {{ paddingClasses(padding) }} {{ marginClasses(margin) }}"
+    s-specs="views.sections.heading"
+    values="{{ _context|cleanContext|json_encode }}"
+>
     <div class="__bkg">
         {# <video autoplay loop>
             <source src="/dist/video/heading-background.mp4" type="video/mp4" />
