--- a/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -168,7 +168,7 @@
     position: absolute;
     left: 99vw;
 
-    &[status='mounted'] {
+    &[mounted] {
       opacity: 1;
       left: auto;
       position: relative;
