--- a/packages/components/s-code-example-component/src/css/s-code-example.css
+++ b/packages/components/s-code-example-component/src/css/s-code-example.css
@@ -10,7 +10,7 @@
         display: none;
     }
 
-    &[status='mounted'] {
+    &[mounted] {
         > * {
             display: block;
         }
