--- a/packages/@examples/01-basic/src/views/sections/story/story.twig
+++ b/packages/@examples/01-basic/src/views/sections/story/story.twig
@@ -1,4 +1,7 @@
-<section class="section-story {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" layout="{{ layout }}" s-appear in="bottom" delay="500">
+<section class="section-story {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" layout="{{ layout }}" s-appear in="bottom" delay="500"
+    s-specs="views.sections.story"
+    values="{{ _context|cleanContext|json_encode }}"
+    >
     <div class="s-container">
         <div class="s-layout:{{ layout }} @mobile s-layout:1_2">
             <div>
@@ -8,8 +11,8 @@
                 <p class="s-typo:p">
                     {{ text|raw }}
                 </p>
-                <a class="s-btn s-mbs:40 s-color:accent" href="{{ cta.link.url }}" target="{{ cta.link.target }}">
-                    {{ cta.label }}
+                <a class="s-btn s-mbs:40 s-color:{{ cta.color }}" href="{{ cta.link.url }}" target="{{ cta.link.target }}">
+                    {{ cta.link.text }}
                 </a>
             </div>
             <div>
