--- a/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
+++ b/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
@@ -1,4 +1,4 @@
-<section class="section-tabs {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" s-specs="views.sections.tabs">
+<section class="section-tabs {{ paddingClasses(padding) }} {{ marginClasses(margin) }}" s-specs="views.sections.tabs" values="{{ _context|cleanContext|json_encode }}">
     <div class="s-container">
         <div class="__layout">
             <div s-appear in="left" delay="400">
@@ -18,8 +18,8 @@
                         <h1 class="s-typo:h3 s-mbe:30">{{ tab.title|raw }}</h1>
                         <p class="s-typo:lead s-mbe:20 s-tc:accent">{{ tab.intro|raw }}</p>
                         <p class="s-typo:p">{{ tab.text|raw }}</p>
-                        <a class="s-btn s-mbs:40 s-color:accent" href="{{ tab.cta.link.url }}" target="{{ tab.cta.link.target }}">
-                            {{ tab.cta.label }}
+                        <a class="s-btn s-mbs:40 s-color:{{ tab.cta.color }}" href="{{ tab.cta.link.url }}" target="{{ tab.cta.link.target }}">
+                            {{ tab.cta.link.text }}
                         </a>
                     </div>
                 {% endfor %}
