--- a/packages/@websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.css
+++ b/packages/@websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.css
@@ -1,24 +1,27 @@
 @font-face {
-    font-display: swap;
+  font-display: swap;
 
-    font-family: 'sugar-fonticon';
-    src: url('/dist/fonts/sugar-icons/sugar-fonticon.eot?1722ee8f4b8ad07ef7f7af5d7dbde88b#iefix')
-            format('embedded-opentype'),
-        url('/dist/fonts/sugar-icons/sugar-fonticon.woff2?1722ee8f4b8ad07ef7f7af5d7dbde88b')
-            format('woff2'),
-        url('/dist/fonts/sugar-icons/sugar-fonticon.woff?1722ee8f4b8ad07ef7f7af5d7dbde88b')
-            format('woff');
+  font-family: 'sugar-fonticon';
+  src: url('/dist/fonts/sugar-icons/sugar-fonticon.eot?60b0ff06d90e0c4b1850647d0d09700e#iefix')
+      format('embedded-opentype'),
+    url('/dist/fonts/sugar-icons/sugar-fonticon.woff2?60b0ff06d90e0c4b1850647d0d09700e')
+      format('woff2'),
+    url('/dist/fonts/sugar-icons/sugar-fonticon.woff?60b0ff06d90e0c4b1850647d0d09700e')
+      format('woff');
 }
 
 .s-icon--animation-easing:before,
+.s-icon--chrome:before,
 .s-icon--css-flex:before,
 .s-icon--css-radius:before,
+.s-icon--edge:before,
 .s-icon--file-css:before,
 .s-icon--file-html:before,
 .s-icon--file-js:before,
 .s-icon--file-md:before,
 .s-icon--file-php:before,
 .s-icon--file-ts:before,
+.s-icon--firefox:before,
 .s-icon--folder-add:before,
 .s-icon--folder-opened:before,
 .s-icon--folder-remove:before,
@@ -56,6 +59,8 @@
 .s-icon--misc-eye:before,
 .s-icon--misc-ring:before,
 .s-icon--misc-tools:before,
+.s-icon--read-direction:before,
+.s-icon--safari:before,
 .s-icon--support-chromium:before,
 .s-icon--support-edge:before,
 .s-icon--support-firefox:before,
@@ -83,250 +88,272 @@
 .s-icon--ui-switch:before,
 .s-icon--ui-tooltip:before,
 .s-icon--ui-typography:before,
-.s-icon--vue:before {
-    position: relative;
+.s-icon--vue:before,
+.s-icon--vuejs:before {
+  position: relative;
 
-    font-family: sugar-fonticon !important;
-    font-style: normal;
-    font-weight: normal !important;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: sugar-fonticon !important;
+  font-style: normal;
+  font-weight: normal !important;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .s-icon--animation-easing:before {
-    content: '\f101';
+  content: '\f101';
+}
+.s-icon--chrome:before {
+  content: '\f102';
 }
 .s-icon--css-flex:before {
-    content: '\f102';
+  content: '\f103';
 }
 .s-icon--css-radius:before {
-    content: '\f103';
+  content: '\f104';
+}
+.s-icon--edge:before {
+  content: '\f105';
 }
 .s-icon--file-css:before {
-    content: '\f104';
+  content: '\f106';
 }
 .s-icon--file-html:before {
-    content: '\f105';
+  content: '\f107';
 }
 .s-icon--file-js:before {
-    content: '\f106';
+  content: '\f108';
 }
 .s-icon--file-md:before {
-    content: '\f107';
+  content: '\f109';
 }
 .s-icon--file-php:before {
-    content: '\f108';
+  content: '\f10a';
 }
 .s-icon--file-ts:before {
-    content: '\f109';
+  content: '\f10b';
+}
+.s-icon--firefox:before {
+  content: '\f10c';
 }
 .s-icon--folder-add:before {
-    content: '\f10a';
+  content: '\f10d';
 }
 .s-icon--folder-opened:before {
-    content: '\f10b';
+  content: '\f10e';
 }
 .s-icon--folder-remove:before {
-    content: '\f10c';
+  content: '\f10f';
 }
 .s-icon--folder:before {
-    content: '\f10d';
+  content: '\f110';
 }
 .s-icon--lang-css-1:before {
-    content: '\f10e';
+  content: '\f111';
 }
 .s-icon--lang-css:before {
-    content: '\f10f';
+  content: '\f112';
 }
 .s-icon--lang-html-1:before {
-    content: '\f110';
+  content: '\f113';
 }
 .s-icon--lang-html:before {
-    content: '\f111';
+  content: '\f114';
 }
 .s-icon--lang-js-1:before {
-    content: '\f112';
+  content: '\f115';
 }
 .s-icon--lang-js:before {
-    content: '\f113';
+  content: '\f116';
 }
 .s-icon--lang-md-1:before {
-    content: '\f114';
+  content: '\f117';
 }
 .s-icon--lang-md:before {
-    content: '\f115';
+  content: '\f118';
 }
 .s-icon--lang-node:before {
-    content: '\f116';
+  content: '\f119';
 }
 .s-icon--lang-php-1:before {
-    content: '\f117';
+  content: '\f11a';
 }
 .s-icon--lang-php:before {
-    content: '\f118';
+  content: '\f11b';
 }
 .s-icon--lang-ts-1:before {
-    content: '\f119';
+  content: '\f11c';
 }
 .s-icon--lang-ts:before {
-    content: '\f11a';
+  content: '\f11d';
 }
 .s-icon--layout-ratio:before {
-    content: '\f11b';
+  content: '\f11e';
 }
 .s-icon--layout-scale:before {
-    content: '\f11c';
+  content: '\f11f';
 }
 .s-icon--layout-space:before {
-    content: '\f11d';
+  content: '\f120';
 }
 .s-icon--layout:before {
-    content: '\f11e';
+  content: '\f121';
 }
 .s-icon--link-broken-solid:before {
-    content: '\f11f';
+  content: '\f122';
 }
 .s-icon--link-broken:before {
-    content: '\f120';
+  content: '\f123';
 }
 .s-icon--logo-coffeekraken:before {
-    content: '\f121';
+  content: '\f124';
 }
 .s-icon--logo-lit-solid:before {
-    content: '\f122';
+  content: '\f125';
 }
 .s-icon--logo-lit:before {
-    content: '\f123';
+  content: '\f126';
 }
 .s-icon--logo-nextjs-solid:before {
-    content: '\f124';
+  content: '\f127';
 }
 .s-icon--logo-nextjs:before {
-    content: '\f125';
+  content: '\f128';
 }
 .s-icon--logo-opensource:before {
-    content: '\f126';
+  content: '\f129';
 }
 .s-icon--logo-vite-solid:before {
-    content: '\f127';
+  content: '\f12a';
 }
 .s-icon--logo-vite:before {
-    content: '\f128';
+  content: '\f12b';
 }
 .s-icon--misc-bubbles:before {
-    content: '\f129';
+  content: '\f12c';
 }
 .s-icon--misc-build-solid:before {
-    content: '\f12a';
+  content: '\f12d';
 }
 .s-icon--misc-build:before {
-    content: '\f12b';
+  content: '\f12e';
 }
 .s-icon--misc-eye:before {
-    content: '\f12c';
+  content: '\f12f';
 }
 .s-icon--misc-ring:before {
-    content: '\f12d';
+  content: '\f130';
 }
 .s-icon--misc-tools:before {
-    content: '\f12e';
+  content: '\f131';
+}
+.s-icon--read-direction:before {
+  content: '\f132';
+}
+.s-icon--safari:before {
+  content: '\f133';
 }
 .s-icon--support-chromium:before {
-    content: '\f12f';
+  content: '\f134';
 }
 .s-icon--support-edge:before {
-    content: '\f130';
+  content: '\f135';
 }
 .s-icon--support-firefox:before {
-    content: '\f131';
+  content: '\f136';
 }
 .s-icon--support-rtl:before {
-    content: '\f132';
+  content: '\f137';
 }
 .s-icon--support-safari:before {
-    content: '\f133';
+  content: '\f138';
 }
 .s-icon--theme-colors:before {
-    content: '\f134';
+  content: '\f139';
 }
 .s-icon--theme:before {
-    content: '\f135';
+  content: '\f13a';
 }
 .s-icon--ui-align:before {
-    content: '\f136';
+  content: '\f13b';
 }
 .s-icon--ui-autocomplete:before {
-    content: '\f137';
+  content: '\f13c';
 }
 .s-icon--ui-avatar:before {
-    content: '\f138';
+  content: '\f13d';
 }
 .s-icon--ui-button:before {
-    content: '\f139';
+  content: '\f13e';
 }
 .s-icon--ui-code:before {
-    content: '\f13a';
+  content: '\f13f';
 }
 .s-icon--ui-copy:before {
-    content: '\f13b';
+  content: '\f140';
 }
 .s-icon--ui-datepicker:before {
-    content: '\f13c';
+  content: '\f141';
 }
 .s-icon--ui-display-preview:before {
-    content: '\f13d';
+  content: '\f142';
 }
 .s-icon--ui-dropdown:before {
-    content: '\f13e';
+  content: '\f143';
 }
 .s-icon--ui-link-broken-solid:before {
-    content: '\f13f';
+  content: '\f144';
 }
 .s-icon--ui-link-broken:before {
-    content: '\f140';
+  content: '\f145';
 }
 .s-icon--ui-loader-solid:before {
-    content: '\f141';
+  content: '\f146';
 }
 .s-icon--ui-loader:before {
-    content: '\f142';
+  content: '\f147';
 }
 .s-icon--ui-more-solid:before {
-    content: '\f143';
+  content: '\f148';
 }
 .s-icon--ui-more:before {
-    content: '\f144';
+  content: '\f149';
 }
 .s-icon--ui-range:before {
-    content: '\f145';
+  content: '\f14a';
 }
 .s-icon--ui-refresh:before {
-    content: '\f146';
+  content: '\f14b';
 }
 .s-icon--ui-switch:before {
-    content: '\f147';
+  content: '\f14c';
 }
 .s-icon--ui-tooltip:before {
-    content: '\f148';
+  content: '\f14d';
 }
 .s-icon--ui-typography:before {
-    content: '\f149';
+  content: '\f14e';
 }
 .s-icon--vue:before {
-    content: '\f14a';
+  content: '\f14f';
+}
+.s-icon--vuejs:before {
+  content: '\f150';
 }
 .s-icon--animation-easing,
+.s-icon--chrome,
 .s-icon--css-flex,
 .s-icon--css-radius,
+.s-icon--edge,
 .s-icon--file-css,
 .s-icon--file-html,
 .s-icon--file-js,
 .s-icon--file-md,
 .s-icon--file-php,
 .s-icon--file-ts,
+.s-icon--firefox,
 .s-icon--folder-add,
 .s-icon--folder-opened,
 .s-icon--folder-remove,
@@ -364,6 +391,8 @@
 .s-icon--misc-eye,
 .s-icon--misc-ring,
 .s-icon--misc-tools,
+.s-icon--read-direction,
+.s-icon--safari,
 .s-icon--support-chromium,
 .s-icon--support-edge,
 .s-icon--support-firefox,
@@ -391,10 +420,11 @@
 .s-icon--ui-switch,
 .s-icon--ui-tooltip,
 .s-icon--ui-typography,
-.s-icon--vue {
-    display: inline-block;
-    line-height: 1;
-    width: 1em;
-    height: 1em;
-    vertical-align: middle;
+.s-icon--vue,
+.s-icon--vuejs {
+  display: inline-block;
+  line-height: 1;
+  width: 1em;
+  height: 1em;
+  vertical-align: middle;
 }
