--- a/packages/components/s-dropzone-component/src/css/s-dropzone.css
+++ b/packages/components/s-dropzone-component/src/css/s-dropzone.css
@@ -89,6 +89,50 @@
         color: sugar.color(error, foreground);
         border: solid 1px sugar.color(error, border);
     }
+    &--upload {
+        background: sugar.color(complementary) !important;
+        color: sugar.color(complementary, foreground);
+
+        &:after {
+            transform: scale(1) translate(-50%, -50%) !important;
+        }
+        &:before {
+            opacity: 1 !important;
+        }
+    }
+
+    &:before {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: sugar.color(complementary, --alpha 0.3);
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        pointer-events: none;
+        opacity: 0;
+        z-index: 1;
+        @sugar.transition (fast);
+    }
+    &:after {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 999px;
+        width: 4em;
+        height: 4em;
+        background: sugar.color(complementary);
+        padding: sugar.padding(30);
+        content: attr(upload-percent);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        pointer-events: none;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 2;
+        @sugar.transition (fast);
+    }
 
     .s-dropzone__drop {
         i {
@@ -107,7 +151,7 @@
         height: 100%;
     }
 
-    .s-dropzone__reset-btn {
+    .s-dropzone__clear-btn {
         position: absolute;
         bottom: sugar.margin(20);
         right: sugar.margin(20);
