--- a/packages/tools/sugar/src/views/twig/sugar/layouts/carpenter/carpenter.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/layouts/carpenter/carpenter.twig
@@ -7,6 +7,6 @@
 {% block body %}
 
     {{ body|raw }}
-    <s-carpenter id="carpenter" save-state sidebar iframe></s-carpenter>
+    <s-carpenter id="carpenter" save sidebar iframe></s-carpenter>
 
 {% endblock %}
