--- a/packages/@examples/01-basic/src/css/sugar.css
+++ b/packages/@examples/01-basic/src/css/sugar.css
@@ -14,9 +14,10 @@
 * Generate media scoped classes to use like "@mobile s-pbe:100", etc...
 * that depends on your theme configuration
 */
-/* @sugar.media.classes ('mobile,tablet') {
-    @sugar.classes();
-} */
+@sugar.media.classes ('mobile,tablet') {
+  /* @sugar.margin.classes(); */
+  @sugar.padding.classes();
+}
 
 /* @sugar.ui.menu.classes(); */
 
