--- a/packages/components/s-google-map-component/src/css/s-google-map.css
+++ b/packages/components/s-google-map-component/src/css/s-google-map.css
@@ -20,6 +20,7 @@
             color: white !important;
             text-shadow: none !important;
             background: none !important;
+            opacity: 0.7 !important;
         }
     }
 }
