--- a/packages/@examples/01-basic/src/views/sections/contact/contact.twig
+++ b/packages/@examples/01-basic/src/views/sections/contact/contact.twig
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div>
-                    <s-google-map map-id="7bfb2f702a07e548" lat="46.618038" lng="7.057280">
+                    <s-google-map map-id="7bfb2f702a07e548" lat="46.618038" lng="7.057280" zoom="15">
                         <s-google-map-marker lat="46.618038" lng="7.057280">
                             {# <div class="__marker">
                                 Hello world
