expose specs values only when $_ENV['S_SPECS_VALUES'] is set to true

--- a/packages/@examples/01-basic/src/views/sections/heading/heading.twig
+++ b/packages/@examples/01-basic/src/views/sections/heading/heading.twig
@@ -1,6 +1,6 @@
 <section class="section-heading {{ paddingClasses(padding) }} {{ marginClasses(margin) }}"
     s-specs="views.sections.heading"
-    values="{{ _context|cleanContext|json_encode }}"
+    {{ specsValues(_context)|raw }}
 >
     <div class="__bkg">
         {# <video autoplay loop>
